<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactenosActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/hueso_blanco" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_name"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/hintName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/tituloMail"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="0dp"
            android:maxLines="1"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/tituloComentario"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutMail"
        >

        <EditText
            android:id="@+id/editComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnComentario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutComentario" />
</androidx.constraintlayout.widget.ConstraintLayout>